[package]
name = "performance-testing-for-databases"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
json = "0.12.4"
mongodb = "3.1.1"
reqwest = { version = "0.12.11", features = ["blocking","json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
